# sam_trainer

./: .gitignore  README.md  README_UNBEATABLE_MODEL.md  STRUCTURE.md  __init__.py  config.example.yaml  debug_training_input.py  demo_unbeatable_model.py  hybrid_conservative_model.py  model_architecture.py  pyproject.toml  quick_test.py  requirements.txt  requirements_unbeatable.txt  test_pure_ml.py  test_unbeatable_model.py  train_unbeatable_model.py  two_layer_training_data.jsonl
archive_old_solutions/: PROJECT_STATUS_SUMMARY.md  enhanced_pipeline_model.py  optimized_pipeline_model.py  train_enhanced_model.py
data/: phase1_validation_data.jsonl  phase2_pattern_data.jsonl  phase3_threshold_data.jsonl  realistic_scenario_test_results_20250913_234506.json  realistic_scenario_test_results_20250913_235946.json  realistic_scenario_test_results_20250914_002141.json  sam_improved_training_data.jsonl  sam_training_data.jsonl  test_general_data.jsonl
docs/: BAO_SAM_DISSCUSION.mdc  CONSTRAINED_SEQUENCE_PLANNER.md  GENERAL_GAMEPLAY_MODEL.md  GENERAL_GAMEPLAY_MODEL_ANALYSIS.md  HYBRID_CONSERVATIVE_MODEL_DESIGN.md  HYBRID_CONSERVATIVE_MODEL_SOLUTION.mdc  OPTIMIZED_GENERAL_MODEL_SOLUTION.md  RANK_COMBO_DISCUSSION.md  README.md  SOLUTION_SUMMARY.md  UNBEATABLE_SEQUENCE_MODEL_DESIGN.mdc  stage1.mdc
logs/: training_results_20250918_150210.json  training_results_20250918_150313.json  training_results_20250918_150442.json  training_results_20250918_150553.json  training_results_20250919_161749.json  training_results_20250919_162914.json  training_results_20250922_234505.json
(+55 files in other folders)
